include $(top_srcdir)/Makefile.decl

templates_DATA = \
  2-instruments-linear-gui.smplan \
  2-instruments-linear-lfo.smplan \
  2-instruments-unison.smplan     \
  2x2-instruments-grid-gui.smplan \
  1-instrument.smplan             \
  empty.smplan                    \
  aurora.smplan                   \
  saturn.smplan                   \
  mars.smplan                     \
  cheese-cake-bass.smplan	  \
  liquid-silver.smplan		  \
  index.smpindex

templatesdir = $(pkgdatadir)/templates

EXTRA_DIST += $(templates_DATA)
